--- a/popup.html
+++ b/popup.html
@@ -2,34 +2,123 @@
 <html>
 <head>
     <title>YouTube Playlist Reorder</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+        :root {
+            --primary-color: #4a90e2;
+            --secondary-color: #f5f5f5;
+            --text-color: #333;
+            --border-color: #ddd;
+            --danger-color: #d9534f;
+        }
+        body {
+            width: 300px;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            margin: 0;
+            color: var(--text-color);
+        }
+        .header {
+            background-color: var(--primary-color);
+            color: white;
+            padding: 12px;
+            text-align: center;
+            font-size: 1.1em;
+        }
+        .content {
+            padding: 15px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 600;
+            text-align: left;
+        }
+        select, input[type="number"] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid var(--border-color);
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            font-size: 1em;
+            cursor: pointer;
+            margin-top: 5px;
+        }
+        #startReorder {
+            background-color: var(--primary-color);
+            color: white;
+        }
+        #cancelReorder {
+            background-color: var(--danger-color);
+            color: white;
+        }
+        #status-container {
+            margin-top: 15px;
+            text-align: center;
+        }
+        #progress-bar-container {
+            width: 100%;
+            background-color: var(--secondary-color);
+            border-radius: 4px;
+            margin-top: 8px;
+            overflow: hidden;
+        }
+        #progress-bar {
+            width: 0%;
+            height: 10px;
+            background-color: var(--primary-color);
+            transition: width 0.2s ease-in-out;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Playlist Reorder</h1>
-        <p>Reorder videos in the current playlist by duration.</p>
-        
-        <div class="input-group">
-            <label for="max-duration">Max Duration (minutes):</label>
-            <input type="number" id="max-duration" value="11" min="1">
-            <small>Only reorder videos under this duration.</small>
-        </div>
+    <div class="header">YouTube Playlist Reorder</div>
 
-        <div class="input-group">
-            <label for="sort-order">Sort Order:</label>
-            <select id="sort-order">
-                <option value="asc" selected>Shortest to Longest</option>
-                <option value="desc">Longest to Shortest</option>
-            </select>
-        </div>
-
-        <button id="reorder-btn">Reorder Playlist</button>
-        <div id="confirmation-controls" style="display: none;">
-            <button id="proceed-btn">Proceed</button>
-            <button id="cancel-btn">Cancel</button>
-        </div>
-        <div id="status"></div>
+    <div id="settings-view" class="content">
+        <form id="reorderForm">
+            <div class="form-group">
+                <label for="order">Sort order</label>
+                <select id="order" name="order">
+                    <option value="asc">Shortest to Longest</option>
+                    <option value="desc">Longest to Shortest</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="maxLength">Max video length (minutes)</label>
+                <input type="number" id="maxLength" name="maxLength" min="0" value="0" placeholder="0 for no limit">
+            </div>
+            <button type="submit" id="startReorder">Start Reordering</button>
+        </form>
+        <button id="cancelReorder" style="display: none;">Cancel Operation</button>
     </div>
+
+    <div id="preview-view" class="content" style="display: none;">
+        <h4>Proposed Order</h4>
+        <div id="preview-list" style="max-height: 200px; overflow-y: auto; border: 1px solid var(--border-color); border-radius: 4px; padding: 5px; text-align: left;">
+            <!-- Preview items will be injected here -->
+        </div>
+        <div style="display: flex; justify-content: space-between; margin-top: 15px; gap: 10px;">
+            <button id="editButton" style="background-color: #777;">Edit</button>
+            <button id="confirmButton" style="background-color: var(--primary-color);">Confirm</button>
+        </div>
+    </div>
+
+    <div class="content">
+        <div id="status-container">
+            <div id="status-text"></div>
+            <div id="progress-bar-container" style="display: none;">
+                <div id="progress-bar"></div>
+            </div>
+        </div>
+    </div>
+
     <script src="popup.js"></script>
 </body>
 </html>
